# RouteRangers

./: .gitignore  LICENSE  Procfile  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh
.github/workflows/: python-app.yml
app/: package-lock.json
app/geodjango/: asgi.py  settings.py  urls.py  wsgi.py
app/route_rangers_api/: apps.py  forms.py  models.py  package-lock.json  test_extract_chicago_ridership.py  tests.py  urls.py  views.py
app/scripts/: extract_chi_bike_data.py  extract_chi_ridership_data.py  extract_nyc_bike_data.py  extract_nyc_data.py  extract_pdx_bike_data.py  extract_scheduled_gtfs.py  ingest_census_data.py  portland_extract.py  (+3 more)
backend/: gtfs_static_links.py  jimena_first_commit.py  matt_first_commit.py  portland_ingest.py  pyproject.toml
backend/geodjango/: manage.py
backend/geodjango/geodjango/: settings.py  urls.py
backend/geodjango/route_rangers_api/: apps.py  models.py  urls.py  views.py
backend/ingestion/: extract_census_data.py  extract_demographic_data.py  extract_nyc_data.py  extract_nyt_data.py  extract_scheduled_gtfs.py
backend/tests/: test_example.py  test_extract_census_data.py  test_extract_nyc_data.py  test_extract_scheduled_gtfs.py  test_jimena_first_commit.py  test_matt_first_commit.py  test_portland_ingest.py
documentation/: architecture-and-deployment.md  code-standards.md  data-sources  data-sources.md  datamodel.md  deployment.md  design.md  endpoints.md
ingestion/: extract_census_data.py  extract_chi_ridership_data.py  extract_demographic_data.py  extract_nyc_data.py  extract_nyt_data.py  extract_portland_ridership.py  extract_scheduled_gtfs.py  ingest_census_data.py  portland_ingest.py
js/: main.js
tests/: test_extract_census_data.py  test_extract_chicago_ridership.py  test_extract_nyc_data.py  test_extract_scheduled_gtfs.py
(+65 files in other folders)
