[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
black = "^24.3.0"
flake8 = "^7.0.0"
pandas = "^2.2.2"
geopandas = "^0.14.3"
gtfs-kit = "^6.1.0"
django = "^5.0.4"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
matplotlib = "^3.8.4"
pytest-django = "^4.8.0"
ruff = "^0.4.1"
requests = "^2.31.0"
django-extensions = "^3.2.3"
djhtml = "^3.0.6"
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
